--- a/PolyhedralTypes/Project.toml
+++ b/PolyhedralTypes/Project.toml
@@ -1,2 +1,5 @@
 [deps]
-Pkg = "44cfe95a-1eb2-52ea-b672-e2afdf69b78f"
+LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
+Oscar = "f1435218-dba5-11e9-1e4d-f1a5fab5fc13"
+Polymake = "d720cf60-89b5-51f5-aff5-213f193123e7"
+Random = "9a3f8284-a2c9-5f02-9a11-845980a1fd5c"
